// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard  1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <span>
      0
    </span>
    <button>
      +
    </button>
  </div>
</div>
`;

exports[`ProductCard should render component 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
  </div>
</div>
`;

exports[`ProductCard should render component with image, title and buttons 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product"
      class="productImg undefined"
      src="./cofee-mug.png"
    />
    <span
      class="productDescription undefined"
    >
      Product 2 - con imagen
    </span>
    <div
      class="buttonsContainer undefined"
    >
      <button
        class="buttonMinus"
      >
         - 
      </button>
      <div
        class="countLabel"
      >
         
        0
         
      </div>
      <button
        class="buttonAdd false "
      >
         + 
      </button>
    </div>
  </div>
</div>
`;
